# NFA-to-DFA-Converter-Final-Project

./: CHANGELOG.md  NFA2DFA.cabal  README.md  test1.txt  test1_DFA.txt  test2.txt  test2_DFA.txt  test3.txt  test3_DFA.txt  test4.txt  test4_DFA.txt  test5.txt  test5_DFA.txt
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: AutomatonConversion.hs  AutomatonDefinitions.hs  DFA.hs  DFAMinimization.hs  NFA.hs
