cabal-version:      2.4
name:               NFA2DFA
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             huntleyls, brownce
maintainer:         huntleyls@appstate.edu, brownce11@appstate.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    -- Modules exported by the library.
    exposed-modules: 
        AutomatonDefinitions
        NFA
        AutomatonConversion
        DFAMinimization
        DFA
    -- Modules included in this library but not exported.
    -- other-modules:
    hs-source-dirs:
      src
      app
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0


executable NFA2DFA
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-modules:   AutomatonDefinitions, NFA, AutomatonConversion, DFAMinimization, DFA

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app, src
    default-language: Haskell2010
